# OptiScaler-GUI

./: .gitignore  CHANGELOG.md  CLAUDE.md  CRITICAL_ISSUES.md  DEBUG_SYSTEM.md  DEPLOYMENT.md  DEVELOPMENT_SUMMARY.md  FUNCTION_REFERENCE.md  LANGUAGE_STANDARDIZATION.md  LICENSE  MULTI_LANGUAGE_SYNC_COMPLETE.md  PORTABLE_README.md  PROGRESS_IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  PYINSTALLER_BUILD_GUIDE.md  README.md  RELEASE.md  ROBUST_ARCHITECTURE.md  SOLUTIONS_SUMMARY.md  TEST_ENV_CHECKLIST.md  TEST_ENV_IMPLEMENTATION.md  TEST_ENV_QUICK_REF.md  TEST_ENV_SETUP.md  TODO_NEXT.md  V0_7_9_UPDATE_SUMMARY.md  build.bat  build.py  build_executable.bat  build_executable.spec  check_requirements.py  cleanup_project.py  cleanup_repository.py  commit_message.txt  create_no_image.py  debug_analyzer.py  debug_gpu.py  debug_optimization_report.md  fix_gpu.bat  hook-numpy.py  index.md  (+20 more)
.github/: copilot-instructions.md  optiscaler-version.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  game_compatibility.md
.github/workflows/: auto_release_on_version_bump.yml  check-optiscaler-release.yml  ci-rust.yml  ci.yml  deploy_docs.yml  release-rust.yml  release.yml  windows-tests.yml
docs/: CHANGELOG.md  DEMO_GUIDE.md  PORTABLE_README.md  TECHNICAL_OVERVIEW.md  V0_7_9_UPDATE_SUMMARY.md
rust/: Cargo.toml  LAUNCHER.md  PARITY.md
rust/crates/opticore/: Cargo.toml
rust/crates/opticore/examples/: ini_dump.rs  manage_cli.rs  scan_cli.rs
rust/crates/opticore/src/: appids.rs  archive.rs  config.rs  i18n.rs  images.rs  ini.rs  launch.rs  lib.rs  library.rs  logging.rs  metadata.rs  model.rs  procwatch.rs  progress.rs
rust/crates/opticore/src/install/: github.rs  manifest.rs  mod.rs  payload.rs
rust/crates/opticore/src/scan/: discovery.rs  epic.rs  folder_facts.rs  gog.rs  heroic.rs  mod.rs  names.rs  steam.rs  xbox.rs
rust/crates/opticore/src/stores/: epic.rs  gog.rs  mod.rs
rust/crates/opticore/tests/fixtures/: python_manifest.json
rust/crates/optiscaler-gui/: Cargo.toml
rust/crates/optiscaler-gui/src/: app.rs  chrome.rs  main.rs  ops.rs  state.rs  theme.rs
rust/crates/optiscaler-gui/src/fx/: background.wgsl  mod.rs
rust/crates/optiscaler-gui/src/screens/: game_page.rs  games_grid.rs  ini_editor.rs  mod.rs  stores.rs
scripts/: prepare_release.ps1  publish_release.ps1
src/: __version__.py  main.py  test_install.py  test_install_detailed.py
src/data/: community_verified_games.json
src/gui/: main_window.py  main_window_backup.py
src/gui/widgets/: game_list_frame.py  global_settings_frame.py  library_roots_frame.py  log_frame.py  settings_editor_frame.py  settings_editor_frame_old.py
src/optiscaler/: manager.py  manager_backup.py  manager_new.py  manager_old.py
src/scanner/: game_scanner.py  library_discovery.py
src/translations/: da.json  en.json  pl.json
src/utils/: archive_extractor.py  cache_manager.py  compatibility_checker.py  config.py  debug.py  i18n.py  i18n_corrupted.py  logging_utils.py  performance.py  progress.py  robust_wrapper.py  system_requirements.py  translation_manager.py  update_manager.py
tests/: conftest.py  test_dynamic_setup.py  test_game_platform_tags.py  test_heroic_scanner.py  test_scan_perf_fixes.py  test_steam_vdf_parsing.py
