[package]
name = "opticore"
description = "OptiScaler-GUI core logic: scanning, install management, config — no GUI dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sevenz-rust2 = "0.21"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
hex = "0.4"
