[package]
name = "opticore"
description = "OptiScaler-GUI core logic: scanning, install management, config — no GUI dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sevenz-rust2 = "0.21"
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["native-tls", "gzip"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "ico", "bmp"] }
pelite = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
md-5 = "0.11"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6"

[dev-dependencies]
tempfile = "3"
hex = "0.4"
