[package]
name = "optiscaler-gui"
description = "OptiScaler GUI — GPU-rendered (egui + wgpu) installer/manager for OptiScaler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opticore = { path = "../opticore" }
eframe = { version = "0.33", default-features = false, features = [
    "wgpu",
    "default_fonts",
] }
# eframe's slim wgpu feature enables no graphics backend by itself —
# pick them explicitly (DX12 primary on Windows, Vulkan as fallback)
wgpu = { version = "27", default-features = false, features = [
    "dx12",
    "vulkan",
    "wgsl",
] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rfd = { version = "0.15", default-features = false }

[[bin]]
name = "OptiScaler-GUI"
path = "src/main.rs"
